Noteworthy changes in version 2.4.7 (unreleased)
------------------------------------------------


  Release-info: https://dev.gnupg.org/T7353


Noteworthy changes in version 2.4.6 (2024-10-29)
------------------------------------------------

  * gpg: New command --quick-set-ownertrust.  [rG967678d972]

  * gpg: Indicate disabled keys in key listings and add list option
    "show-ownertrust".  [rG2a0a706eb2]

  * gpg: Make sure a DECRYPTION_OKAY is never issued for a bad OCB
    tag.  [T7042]

  * gpg: Do not allow to accidently set the RENC usage.  [T7072]

  * gpg: Accept armored files without CRC24 checksum.  [T7071]

  * gpg: New --import-option "only-pubkeys".  [T7146]

  * gpg: Repurpose the AKL mechanism "ldap" to work like the keyserver
    mechnism but only for LDAP keyservers.  [rG6551281ca3]

  * gpg: ADSKs are now configurable for new keys.  [T6882]

  * gpg: New option --proc-all-sigs.  [T7261]

  * gpg: Fix a wrong decryption failed status for signed and OCB
    encrypted messages without a signature verification key.  [T7042]

  * gpg: Make --no-literal work again for -c and --store.  [T5852]

  * gpg: Fix getting key by IPGP.  [T7288]

  * gpg: Validate the trustdb after the import of a trusted key.
    [T7200]

  * gpg: Exclude expired trusted keys from the key validation process.
    [T7200]

  * gpgsm: New option --assert-signer.  [T7286]

  * gpgsm: Emit user IDs with an empty Subject also in colon mode.
    [T7171]

  * keyboxd: Fix a race condition on the database handle.  [T7294]

  * agent: Consider an empty pattern file as valid.  [rGc27534de95]

  * agent: Fix error handling of READKEY.  [T6012]

  * agent: Avoid random errors when storing key in ephemeral mode.
    [T7129, rG19d93a239d]

  * agent: Make "SCD DEVINFO --watch" more robust.  [T7151]

  * agent: Fix detection of the yet unused trustflag de-vs.  [T5079]

  * scd: Improve KDF data object handling for OpenPGP cards.  [T7058]
